--- a/src/app/count-down/count-down.component.css
+++ b/src/app/count-down/count-down.component.css
@@ -11,7 +11,7 @@
     margin: auto;
   }
 
-  @media only screen and (max-width: 450px) {
+  @media only screen and (max-width: 500px) {
     .timer {
       width: 90vw;
     }
