--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -59,7 +59,7 @@ img {
     padding-top: 1.2rem;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 500px) {
     .header-name {
         font-size: 25vw;
     }
