--- a/src/app/schedule/schedule.component.css
+++ b/src/app/schedule/schedule.component.css
@@ -25,10 +25,10 @@
 }
   
 .schedule-botton-padding {
-    padding-block: 10vh;
+    padding-bottom: 10vh;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 500px) {
 
     .text-info {
         margin-top: -100vh;
